# lumora

./: .gitattributes  .gitignore  BUILD.md  HANDOFF-AMD-DEBUG.md  HANDOFF-INTEL-QSV-DEBUG.md  HDRTray-LICENSE.html  README.de.md  README.md  RELEASE.md  afterpack.js  doorman.html  index.html  installer.nsh  main.js  media-relay-LICENSE.txt  nv-codec-headers-LICENSE.txt  osd.html  package-lock.json  package.json  player.html  sign.js  styles.css
_testlab/: HANDOFF-AMD.md  README.md  ab-suppress-test.js  amf-gpu-test.cmd  amf-gpu-test2.cmd  amf-gpu-test3.cmd  artwork.js  broker-test.js  build-relay-deps.ps1  build-relay.ps1  capture-any.ps1  capture-region.ps1  capture.ps1  clobber-test.js  cpuclock-test.js  crashcheck.ps1  deploy-client.js  deploy.local.json.example  deploy.ps1  gamecheck.ps1  keyhook-test.js  koffi-xinput-test.js  longtest-2026-07-07.csv  longtest.ps1  mahm-test.js  make-lumora-ovl.js  nat-probe.js  nat-probe2.js  nvml-test.js  pawnio-test.js  pdf-text.js  pdhclock-test.js  pe-exports.js  plan-website-release.json  portmap-recheck.js  re-strings.py  re-xref.py  re-xref2.py  re-xref3.py  readme-clean.txt  (+23 more)
_testlab/debug-archiv/: README.md
_testlab/patches/: libjuice-registry-mutex-leak.patch
_testlab/release-notes/: 0.2.11.txt  2.1.2.txt  2.1.3.txt  2.2.0.txt  2.2.1.txt  2.2.10.txt  2.2.11.en.txt  2.2.11.txt  2.2.12.en.txt  2.2.12.txt  2.2.13.en.txt  2.2.13.txt  2.2.14.en.txt  2.2.14.txt  2.2.15.en.txt  2.2.15.txt  2.2.16.en.txt  2.2.16.txt  2.2.17.en.txt  2.2.17.txt  2.2.18.en.txt  2.2.18.txt  2.2.19.en.txt  2.2.19.txt  2.2.2.txt  2.2.20.en.txt  2.2.20.txt  2.2.3.txt  2.2.4.txt  2.2.5.txt  2.2.6.txt  2.2.7.txt  2.2.8.txt  3.0.0.txt
capture/: Program.cs  lumora-capture.csproj
capture-cpp/: .gitignore
capture-cpp/lumora-capture/: CMakeLists.txt  app.rc  main.cpp  mtx-dbg.yml  mtx-e2e.yml  mtx-rtsp.yml  mtx-whep.yml
capture-cpp/lumora-elevate/: CMakeLists.txt  app.rc  main.cpp
capture-cpp/lumora-relay/: CMakeLists.txt  ctrl_server.cpp  ctrl_server.h  http_mini.h  ingest.cpp  ingest.h  main.cpp  relay_core.cpp  relay_core.h  test_whep.html  ts_demux.cpp  ts_demux.h  whep_server.cpp  whep_server.h
capture-cpp/lumora-shell/: CMakeLists.txt  IPC-INVENTAR.md  Testplan-Native.html  app.rc  artwork.h  build-installer.ps1  etw_present.h  group_lan.h  http_server.h  input_bridge.h  installer.nsi  launch_game.h  main.cpp  osd_adl.h  osd_broker.h  osd_rtss.h  router_hints.h  scan_games.h  update_components.h  upnp.h
capture-cpp/poc-amf/: CMakeLists.txt  main.cpp
capture-cpp/poc-audio/: CMakeLists.txt  main.cpp
capture-cpp/poc-mpegts/: CMakeLists.txt  main.cpp  mtx-test.yml
capture-cpp/poc-nv12/: CMakeLists.txt  main.cpp
capture-cpp/poc-nvenc/: CMakeLists.txt  main.cpp
capture-cpp/poc-wgc/: CMakeLists.txt  main.cpp
capture-cpp/poc-window/: CMakeLists.txt  main.cpp
website/: .htaccess  datenschutz.html  deploy.php  deploy.secret.php.example  discord-alternative.html  download.php  eingabe-bruecke.html  gamepad.html  gaming-osd.html  gruppe.php  impressum.html  index.html  portfreigabe.html  robots.txt  root.htaccess  site.css  sitemap.xml  stream.php  streaming.html  sync-9d0b179cfa.php  sync-endpoint.php
website/en/: datenschutz.html  discord-alternative.html  eingabe-bruecke.html  gamepad.html  gaming-osd.html  impressum.html  index.html  portfreigabe.html  streaming.html
